# BERT-fine-tune_demo

./: .gitignore  README.md  pyproject.toml
bert/: analysis_result_v2.py  demo.py  predict.py
bert/check_answer_v2/: dev.json  exact.json  memo.md  pattern1.json  pattern2.json  pattern3.json
bert/results/: submission.json
