[tool.poetry]
name = "bert"
version = "0.1.0"
description = ""
authors = ["YoshitakaOyama<yoshitaka.oyama@nexusfrontier.tech>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "2.4.1"
simpletransformers = "^0.24.8"
torch = "^1.4.0"
scikit-learn = "^0.22.2"
seqeval = "^0.0.12"
tensorboardx = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
